# python_tkinter_formation

./: README.md  pyproject.toml
python_tkinter_formation/: bouncing.py  first_example.py  main.py
