[tool.poetry]
name = "python-tkinter-formation"
version = "0.1.0"
description = ""
authors = ["NyxAether <contact.nyxhemera@gmail.com>"]
readme = "README.md"
packages = [{include = "python_tkinter_formation"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[tool.black]
line-length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
